# libutf

./: .gitignore  CMakeLists.txt  LICENSE  meson.build
.github/workflows/: main.yml
include/: CMakeLists.txt  libutf.h
src/: CMakeLists.txt  libutf.c
